# portfolio

DNSResolver/src/: DNSCache.java  DNSHeader.java  DNSMessage.java  DNSQuestion.java  DNSRecord.java  DNSServer.java
Game_WayToHeaven/: CMakeLists.txt
Game_WayToHeaven/src/: WayToHeaven.cpp  player.cpp  player.hpp  trunk.cpp  trunk.hpp
LMS/: LMS.sln
LMS/LMS/: LMS.csproj  Program.cs
LMS/LMS/Controllers/: AdministratorController.cs  CommonController.cs  ProfessorController.cs  StudentController.cs
LMS/LMS/Migrations/: 20230803005625_CreateIdentitySchema.Designer.cs
LMS/LMS/obj 10.39.33 PM/: LMS.csproj.nuget.dgspec.json  LMS.csproj.nuget.g.props  project.assets.json  project.nuget.cache
LMS/LMS/obj 4.34.13 PM/: LMS.csproj.nuget.dgspec.json
LMS/LMSControllerTests/: LMSControllerTests.csproj  UnitTest1.cs
MyChatServer/resources/: index.html  webChat.html  webChat.js
MyChatServer/src/: ChatJson.java  ConnectionHandler.java  MyChatServer.java  Room.java
Synthesizer/: pom.xml
WebChat/resources/: styles.css
flappy_bird_game/: Project setup.docx  birditem.cpp  birditem.h  pillaritem.cpp  pillaritem.h  resource.qrc  scene.cpp  scene.h  widget.cpp  widget.h  widget.ui
msdscript/: CMakeLists.txt  Makefile  README.md  cmdline.cpp  cmdline.h  env.cpp  env.h  expr.cpp  expr.h  main.cpp  parse.cpp  parse.h  pointer.h  run_msdscript.cpp  testExpr.cpp  val.cpp  val.h
msdscript/documentation/: Doxyfile
msdscript/documentation/html/: annotated.html  class_add_expr-members.html  class_add_expr.html  class_expr-members.html  class_expr.html  class_mult_expr.html  (+26 more)
(+103 files in other folders)
